--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="sample_fragment">sample fragment</string>
     <string name="link_lv_fragment">link listView fragment</string>
     <string name="adapter_fragment">adapter fragment</string>
+    <string name="dialog_fragment">dialog fragment</string>
+    <string name="dialog">dialog</string>
     <string name="title_activity">title activity</string>
     <string name="position_left">Left</string>
     <string name="position_right">Right</string>
