加入自定义不可滑动区域。0.4.0版本更新

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="xml_activity">xml activity</string>
     <string name="sample_fragment">sample fragment</string>
     <string name="link_lv_fragment">link listView fragment</string>
-    <string name="adapter_fragment">adapter fragment</string>
+    <string name="custom_slidable_fragment">custom slidable fragment</string>
     <string name="dialog_fragment">dialog fragment</string>
     <string name="dialog">dialog</string>
     <string name="title_activity">title activity</string>
@@ -25,5 +25,5 @@
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
     <string name="title_activity_xmll">XmllActivity</string>
-    <string name="stay_tuned">Stay tuned</string>
+    <string name="custom_slidable_tip">touch this view(blue range) can not slide fragment</string>
 </resources>
